--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,6 @@ DATABASE_USER=hoangtrungduc
 DATABASE_PASSWORD=1234
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=5432
+
+# SECRET_KEY cho JWT
+SECRET_KEY=DjangoProject1
